# dl_ros_for_mm

./: .gitignore  CMakeLists.txt  README.md  demo_agent.sh  inference.py  model_agent.sh  model_change.py  package.xml  pyproject.toml  train.py
docker/: Dockerfile  docker-compose.yml
launch/: inference.launch  model_agent.launch
model/: base_agent.py  bc.py  cnn.py  demo_agent.py  env.py  mlp.py  model_agent.py
scripts/: inference.py  initialize.py
test/: model_test.py  model_train.py  np_test.py  test_dataset.py  torch_test.py  visualize.py
utils/: dataset.py  device.py  model_change.py  utils.py
